# DistortSignalsRepoV2

./: .editorconfig  .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  SUMMARY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/python/shared/: README.md  pyproject.toml
apps/python/shared/src/ds_shared/: __init__.py  circuit_breaker.py  claims.py  db.py  retries.py  time.py
apps/python/signal-generator/: README.md  pyproject.toml
apps/python/signal-generator/src/: main.py
contracts/: README.md
db/: README.md
docs/: 00_START_HERE.md  AGGREGATOR_CURSOR_BUG_FIX_DEPLOYMENT.md  AGGREGATOR_CURSOR_BUG_FIX_PLAN.md  AGGREGATOR_CURSOR_BUG_FIX_SUMMARY.md  AGGREGATOR_CURSOR_BUG_HARDENING_APPLIED.md  CHANGE_SUMMARY.md  CLOUDFLARE_CI_CD_SETUP.md  COMPLETE_SOLUTION.md  DATA_QUALITY_VALIDATION_PLAN_V1.1_COMPLETE.md  DATA_QUALITY_VALIDATION_WORKER_PLAN.md  DATA_QUALITY_VALIDATOR_QUICK_REF.md  DELIVERY_SUMMARY.md  DXY_DATA_DESIGN_ANALYSIS.md  DXY_MIGRATION_AGGREGATION_REVIEW.md  DXY_MIGRATION_BEFORE_AFTER.md  DXY_MIGRATION_FEEDBACK_INCORPORATION.md  DXY_MIGRATION_HANDOFF.md  DXY_MIGRATION_IMPLEMENTATION_PLAN.md  DXY_MIGRATION_INDEX.md  DXY_MIGRATION_PHASE5_CORRECTED.md  DXY_MIGRATION_PHASE5_IMPLEMENTATION_PLAN.md  DXY_MIGRATION_PLAN_FINAL.md  DXY_MIGRATION_QUICK_REFERENCE.md  DXY_MIGRATION_README.md  MIGRATION_001_REVIEW.md  ORPHANED_INGEST_STATE_FIX.md  ORPHANED_STATE_SAFEGUARD.md  PAUSE_RESUME_FEATURE.md  PAUSE_RESUME_QUICKSTART.md  PHASE5_ARTIFACTS_INDEX.md  PHASE5_CORRECTED_IMPLEMENTATION.md  PHASE5_CRITICAL_ISSUES_AND_FIXES.md  PHASE5_DEPLOYMENT_CHECKLIST.md  PHASE5_DEPLOYMENT_GUIDE.md  PHASE5_ORIGINAL_VS_CORRECTED.md  PHASE5_REQUIREMENTS_ARTIFACT.md  PHASE5_REVIEW_COMPLETE.md  PHASE5_REVIEW_EXECUTIVE_SUMMARY.md  QUICK_REFERENCE.md  (+8 more)
(+129 files in other folders)
