[tool.poetry]
name = "ds-shared"
version = "1.0.0"
description = "Shared Python utilities for DistortSignals"
authors = ["DistortSignals Team"]
readme = "README.md"
packages = [{include = "ds_shared", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
supabase = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
